# pi-hole-api

./: .envrc-example  .gitignore  Cargo.toml  README.md  TODO.md  docker-compose.yml
examples/: authentication.rs  simple.rs
src/: api_types.rs  custom_deserializers.rs  errors.rs  fake_hash_map.rs  ftl_types.rs  lib.rs
tests/: ftl_types_test.rs  tests.rs
