[package]
name = "pi-hole-api"
version = "0.1.1"
authors = ["Connor Holloway <c.holloway314@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Library for interacting with the Pi Hole PHP API"
repository = "https://github.com/Scratchcat1/pi-hole-api"
keywords = ["pi-hole", "api"]
categories = ["api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.20", features = ["rt-threaded", "macros"] }
simple-error = "0.2.1"