[package]
name = "pi-hole-api"
version = "0.2.0"
authors = ["Connor Holloway <c.holloway314@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Library for interacting with the Pi Hole PHP API"
repository = "https://github.com/Scratchcat1/pi-hole-api"
keywords = ["pi-hole", "api"]
categories = ["api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_json = "1.0.81"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
trust-dns-resolver = "0.21.2"
test-context = "0.1.3"